[package]
name = "pyro-thor-yara"
version = "0.1.0"
edition = "2021"
authors = ["M507"]
description = "Thor YARA Rules Package for Pyro - Rust multiplatform implementation"
license = "MIT"
repository = "https://github.com/M507/pyro-thor-yara"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
zip = "0.6"
tempfile = "3.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
redb = "2.1"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
redb = "2.1"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winbase"] }

[target.'cfg(unix)'.dependencies]
nix = "0.27"

[[bin]]
name = "pyro-thor"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"